--- a/advert/src/main/res/layout/advert_layout.xml
+++ b/advert/src/main/res/layout/advert_layout.xml
@@ -7,7 +7,14 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:visibility="gone" />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/iv_gif"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <com.tkda.advert.view.CountDownView
         android:id="@+id/cd_view"
